fixed span and switched to auto overflow

--- a/CSS/Homepage.css
+++ b/CSS/Homepage.css
@@ -110,7 +110,7 @@ img.aside1{
 
 .aside2 ol{
     margin: 2.5%;
-    
+    overflow: hidden;
     background-color: inherit;
 }
 
@@ -122,7 +122,7 @@ img.aside1{
     color: #04d183;
     background-color: #2f6f45;
     list-style-position: inside;
-
+    overflow: hidden;
 }
 
 .aside2 li span{
@@ -136,7 +136,7 @@ img.aside1{
 .containerleft{
     
     width: 20%;
-    height: 750px;
+    height: 100%;
     margin: 2.5%;
     top: 20%;
     float: left;
@@ -154,10 +154,10 @@ img.aside1{
 .aside3{
     margin: 0%;
     width: 100%;
-    height: 500px;
+    height: 100%px;
     background-color: rgb(200, 199, 199) !important;
     position: relative;
-
+    overflow: auto;
 }
 
 .aside3 h2 {
@@ -182,6 +182,7 @@ img.aside1{
     padding: 3%;
     font-size: larger;
     list-style-image: url('/favicons/checkboxsUnchecked.png');
+    overflow: auto;
 }
 
 .aside3 li:nth-child(odd){
@@ -193,6 +194,7 @@ img.aside1{
     background-color: lightgray;
     font-size: larger;
     list-style-image: url('/favicons/checkboxsChecked.png') !important; 
+    overflow: auto;
 }
 
 .aside3 li span{
@@ -201,6 +203,14 @@ img.aside1{
 }
 
 .containerright img{
-    width: 95%;
-    margin: 2.5%;
+    width: 100%;
+    margin: 0;
+}
+
+.footer {
+    background-color: rgb(0, 24, 19);
+    width: 100%;
+    height: 15%;
+    position: fixed;
+    bottom: 0%;
 }
